# video-subtitle-parser

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
agents/: aider-workflow.md  claude-command.md  codex-skill.md  cursor-rule.md  hermes-workflow.md  openclaw-skill.md  windsurf-rule.md
articles/: 01-why-video-needs-local-evidence.md  02-design-philosophy.md  03-examples-for-public-accounts.md
docs/: ai-agent-integration.md  artifact-contract.md  platform-notes.md  requirements-and-limitations.md  requirements-and-limitations.zh-CN.md
examples/: jianlai_terms.txt
scripts/: douyin_transcribe.py
src/video_subtitle_parser/: __init__.py  cli.py
tests/: test_core.py
